# 4-Color-Theorem

./: graph_class.py  index.html  main.py  pyproject.toml  side_note.py
graph_csvs/: colors.csv  cube.csv  triangular_pyramid.csv
