[tool.poetry]
name = "repl_python3_GraphVisualizationV3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.6.3"
pandas = "^1.3.3"
pyvis = "^0.1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
